<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Bhagavad Gita</string>
    <string name="adhyay">अध्याय</string>
    <string name="textview">TextView</string>
    <string name="adhyay1_shloka">adhyay1 shloka</string>
    <string name="adhyay1">अध्याय 1</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="shloka">\"श्लोक \"</string>
    <string name="share_shloka">Share Shloka</string>
    <string name="favourite">Favourite</string>
    <string name="content_about">हमने इस एंड्रॉयड ऐप के रूप में "भगवद् गीता" के अध्यायों और सही उच्चारण को संकलित करने की कोशिश की है। आप इस ऐप्लिकेशन में कोई गलती पाते हैं हमें एक ईमेल भेजें और हम इसे सही करने का प्रयास करेंगे।</string>
    <string name="button">Button</string>
    <string name="navigation_drawer_open">Open Drawer</string>
    <string name="navigation_drawer_close">Close Drawer</string>
    <string name="header_title_bhagvadgita">श्रीमद्भगवद्गीता</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="rate_app">Rate app</string>
    <string name="about">About</string>
    <string name="share_sloka">Share Sloka</string>
    <string name="title_activity_about_app">AboutAppActivity</string>
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="fab">fab</string>
    <string name="list_view_item_image">list view item image</string>
    <string name="share_the_app">Share the app</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="youtube_channel_link"><a href="http://m.youtube.com/channel/UCVtjkubwUesxdPb6hpnoANw">Youtube Channel Link</a></string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="about_app">About app</string>
    <string name="notification_title">श्रीमद्भगवद्गीता ज्ञान</string>
    <string name="notification_text">आज का ज्ञान</string>
    <string name="feedback">Feedback</string>
    <string-array name="adhyay_suchi">
        <item>अध्याय 1 ~ अर्जुनविषाद योग</item>
        <item>अध्याय 2 ~ सांख्य योग </item>
        <item>अध्याय 3 ~ कर्म योग </item>
        <item>अध्याय 4 ~ ज्ञानकर्मसंन्यास योग</item>
        <item>अध्याय 5 ~ कर्मसंन्यास योग</item>
        <item>अध्याय 6 ~ आत्मसंयम योग</item>
        <item>अध्याय 7 ~ ज्ञानविज्ञान योग</item>
        <item>अध्याय 8 ~ अक्षरब्रह्म योग</item>
        <item>अध्याय 9 ~ राजविद्याराजगुह्य योग</item>
        <item>अध्याय 10 ~ विभूतियोग</item>
        <item>अध्याय 11 ~ विश्वरूपदर्शन योग</item>
        <item>अध्याय 12 ~ भक्ति योग</item>
        <item>अध्याय 13 ~ क्षेत्र-क्षेत्रज्ञविभागयोग</item>
        <item>अध्याय 14 ~ गुणत्रयविभाग योग</item>
        <item>अध्याय 15 ~ पुरुषोत्तम योग</item>
        <item>अध्याय 16 ~ दैवासुरसम्पद्विभाग योग</item>
        <item>अध्याय 17 ~ श्रद्धात्रयविभाग योग</item>
        <item>अध्याय 18 ~ मोक्षसंन्यास योग</item>
    </string-array>
    <string name="admob_application_id">ca-app-pub-7368351753880084~9932194098</string>
<string name="interstitial_ad_unit_id_adhyay">ca-app-pub-3940256099942544/1033173712</string>
    <string name="sanskrit_c18s1">(त्याग का विषय) \n अर्जुन उवाच :-\n सन्न्यासस्य महाबाहो तत्त्वमिच्छामि वेदितुम्। \n त्यागस्य च हृषीकेश पृथक्केशिनिषूदन  ॥1॥\n</string>
    <string name="bhavarth_c18s1">भावार्थ  :-  अर्जुन बोले- हे महाबाहो! हे अन्तर्यामिन्! हे वासुदेव! मैं संन्यास और त्याग के तत्व को पृथक्-पृथक् जानना चाहता हूँ\n॥1॥\n</string>
    <string name="sanskrit_c18s2">श्रीभगवानुवाच  :-\nकाम्यानां कर्मणा न्यासं सन्न्यासं कवयो विदुः।\nसर्वकर्मफलत्यागं प्राहुस्त्यागं विचक्षणाः  ॥2॥\n</string>
    <string name="bhavarth_c18s2">भावार्थ  :-  श्री भगवान बोले- कितने ही पण्डितजन तो काम्य कर्मों के (स्त्री, पुत्र और धन आदि प्रिय वस्तुओं की प्राप्ति के लिए तथा रोग-संकटादि की निवृत्ति के लिए जो यज्ञ, दान, तप और उपासना आदि कर्म किए जाते हैं, उनका नाम काम्यकर्म है।) त्याग को संन्यास समझते हैं तथा दूसरे विचारकुशल पुरुष सब कर्मों के फल के त्याग को (ईश्वर की भक्ति, देवताओं का पूजन, माता-पितादि गुरुजनों की सेवा, यज्ञ, दान और तप तथा वर्णाश्रम के अनुसार आजीविका द्वारा गृहस्थ का निर्वाह एवं शरीर संबंधी खान-पान इत्यादि जितने कर्तव्यकर्म हैं, उन सबमें इस लोक और परलोक की सम्पूर्ण कामनाओं के त्याग का नाम सब कर्मों के फल का त्याग है) त्याग कहते हैं\n॥2॥</string>
    <string name="sanskrit_c18s3">त्याज्यं दोषवदित्येके कर्म प्राहुर्मनीषिणः।\nयज्ञदानतपःकर्म न त्याज्यमिति चापरे ॥3॥\n</string>
    <string name="bhavarth_c18s3">भावार्थ  :-  कई एक विद्वान ऐसा कहते हैं कि कर्ममात्र दोषयुक्त हैं, इसलिए त्यागने के योग्य हैं और दूसरे विद्वान यह कहते हैं कि यज्ञ, दान और तपरूप कर्म त्यागने योग्य नहीं हैं\n॥3॥</string>
    <string name="sanskrit_c18s4">निश्चयं श्रृणु में तत्र त्यागे भरतसत्तम।\nत्यागो हि पुरुषव्याघ्र त्रिविधः सम्प्रकीर्तितः  ॥4॥\n</string>
    <string name="bhavarth_c18s4">भावार्थ  :-  हे पुरुषश्रेष्ठ अर्जुन ! संन्यास और त्याग, इन दोनों में से पहले त्याग के विषय में तू मेरा निश्चय सुन। क्योंकि त्याग सात्विक, राजस और तामस भेद से तीन प्रकार का कहा गया है\n॥4॥</string>
    <string name="sanskrit_c18s5">यज्ञदानतपःकर्म न त्याज्यं कार्यमेव तत्।\nयज्ञो दानं तपश्चैव पावनानि मनीषिणाम्  ॥5॥\n</string>
    <string name="bhavarth_c18s5">भावार्थ  :-  यज्ञ, दान और तपरूप कर्म त्याग करने के योग्य नहीं है, बल्कि वह तो अवश्य कर्तव्य है, क्योंकि यज्ञ, दान और तप -ये तीनों ही कर्म बुद्धिमान पुरुषों को (वह मनुष्य बुद्धिमान है, जो फल और आसक्ति को त्याग कर केवल भगवदर्थ कर्म करता है।) पवित्र करने वाले हैं\n॥5॥</string>
    <string name="sanskrit_c18s6">एतान्यपि तु कर्माणि सङ्गं त्यक्त्वा फलानि च।\nकर्तव्यानीति में पार्थ निश्चितं मतमुत्तमम्  ॥6॥\n</string>
    <string name="bhavarth_c18s6">भावार्थ  :-  इसलिए हे पार्थ! इन यज्ञ, दान और तपरूप कर्मों को तथा और भी सम्पूर्ण कर्तव्यकर्मों को आसक्ति और फलों का त्याग करके अवश्य करना चाहिए, यह मेरा निश्चय किया हुआ उत्तम मत है\n॥6॥</string>
    <string name="sanskrit_c18s7">नियतस्य तु सन्न्यासः कर्मणो नोपपद्यते।\nमोहात्तस्य परित्यागस्तामसः परिकीर्तितः  ॥7॥\n</string>
    <string name="bhavarth_c18s7">भावार्थ  :-  (निषिद्ध और काम्य कर्मों का तो स्वरूप से त्याग करना उचित ही है) परन्तु नियत कर्म का (इसी अध्याय के श्लोक 48 की टिप्पणी में इसका अर्थ देखना चाहिए।) स्वरूप से त्याग करना उचित नहीं है। इसलिए मोह के कारण उसका त्याग कर देना तामस त्याग कहा गया है\n॥7॥</string>
    <string name="sanskrit_c18s8">दुःखमित्येव यत्कर्म कायक्लेशभयात्त्यजेत्।\nस कृत्वा राजसं त्यागं नैव त्यागफलं लभेत्  ॥8॥\n</string>
    <string name="bhavarth_c18s8">भावार्थ  :-  जो कुछ कर्म है वह सब दुःखरूप ही है- ऐसा समझकर यदि कोई शारीरिक क्लेश के भय से कर्तव्य-कर्मों का त्याग कर दे, तो वह ऐसा राजस त्याग करके त्याग के फल को किसी प्रकार भी नहीं पाता\n॥8॥</string>
    <string name="sanskrit_c18s9">कार्यमित्येव यत्कर्म नियतं क्रियतेअर्जुन।\nसङ्गं त्यक्त्वा फलं चैव स त्यागः सात्त्विको मतः  ॥9॥\n</string>
    <string name="bhavarth_c18s9">भावार्थ  :-  हे अर्जुन! जो शास्त्रविहित कर्म करना कर्तव्य है- इसी भाव से आसक्ति और फल का त्याग करके किया जाता है- वही सात्त्विक त्याग माना गया है\n॥9॥</string>
    <string name="sanskrit_c18s10">न द्वेष्ट्यकुशलं कर्म कुशले नानुषज्जते।\n त्यागी सत्त्वसमाविष्टो मेधावी छिन्नसंशयः  ॥10॥\n</string>
    <string name="bhavarth_c18s10">भावार्थ  :-  जो मनुष्य अकुशल कर्म से तो द्वेष नहीं करता और कुशल कर्म में आसक्त नहीं होता- वह शुद्ध सत्त्वगुण से युक्त पुरुष संशयरहित, बुद्धिमान और सच्चा त्यागी है\n ॥10॥</string>
    <string name="sanskrit_c18s11">न हि देहभृता शक्यं त्यक्तुं कर्माण्यशेषतः।\n यस्तु कर्मफलत्यागी स त्यागीत्यभिधीयते  ॥11॥\n</string>
    <string name="bhavarth_c18s11">भावार्थ  :-  क्योंकि शरीरधारी किसी भी मनुष्य द्वारा सम्पूर्णता से सब कर्मों का त्याग किया जाना शक्य नहीं है, इसलिए जो कर्मफल त्यागी है, वही त्यागी है- यह कहा जाता है\n ॥11॥</string>
    <string name="sanskrit_c18s12">अनिष्टमिष्टं मिश्रं च त्रिविधं कर्मणः फलम्।\n भवत्यत्यागिनां प्रेत्य न तु सन्न्यासिनां क्वचित्  ॥12॥\n</string>
    <string name="bhavarth_c18s12">भावार्थ  :-  कर्मफल का त्याग न करने वाले मनुष्यों के कर्मों का तो अच्छा, बुरा और मिला हुआ- ऐसे तीन प्रकार का फल मरने के पश्चात अवश्य होता है, किन्तु कर्मफल का त्याग कर देने वाले मनुष्यों के कर्मों का फल किसी काल में भी नहीं होता\n॥12॥</string>
    <string name="sanskrit_c18s13">(कर्मों के होने में सांख्यसिद्धांत का कथन) \nपञ्चैतानि महाबाहो कारणानि निबोध मे।\nसाङ्ख्ये कृतान्ते प्रोक्तानि सिद्धये सर्वकर्मणाम्  ॥13॥\n</string>
    <string name="bhavarth_c18s13">भावार्थ  :-  हे महाबाहो! सम्पूर्ण कर्मों की सिद्धि के ये पाँच हेतु कर्मों का अंत करने के लिए उपाय बतलाने वाले सांख्य-शास्त्र में कहे गए हैं, उनको तू मुझसे भलीभाँति जान\n ॥13॥\n</string>
    <string name="sanskrit_c18s14">अधिष्ठानं तथा कर्ता करणं च पृथग्विधम्।\n विविधाश्च पृथक्चेष्टा दैवं चैवात्र पञ्चमम्  ॥14॥\n </string>
    <string name="bhavarth_c18s14">भावार्थ  :-  इस विषय में अर्थात कर्मों की सिद्धि में अधिष्ठान (जिसके आश्रय कर्म किए जाएँ, उसका नाम अधिष्ठान है) और कर्ता तथा भिन्न-भिन्न प्रकार के करण (जिन-जिन इंद्रियादिकों और साधनों द्वारा कर्म किए जाते हैं, उनका नाम करण है) एवं नाना प्रकार की अलग-अलग चेष्टाएँ और वैसे ही पाँचवाँ हेतु दैव (पूर्वकृत शुभाशुभ कर्मों के संस्कारों का नाम दैव है) है\n ॥14॥</string>
    <string name="sanskrit_c18s15">शरीरवाङ्मनोभिर्यत्कर्म प्रारभते नरः।\nन्याय्यं वा विपरीतं वा पञ्चैते तस्य हेतवः  ॥15॥\n  </string>
    <string name="bhavarth_c18s15">भावार्थ  :-  मनुष्य मन, वाणी और शरीर से शास्त्रानुकूल अथवा विपरीत जो कुछ भी कर्म करता है- उसके ये पाँचों कारण हैं\n  ॥15॥</string>
    <string name="sanskrit_c18s16">तत्रैवं सति कर्तारमात्मानं केवलं तु यः।\nपश्यत्यकृतबुद्धित्वान्न स पश्यति दुर्मतिः  ॥16॥\n </string>
    <string name="bhavarth_c18s16">भावार्थ  :-  परन्तु ऐसा होने पर भी जो मनुष्य अशुद्ध बुद्धि (सत्संग और शास्त्र के अभ्यास से तथा भगवदर्थ कर्म और उपासना के करने से मनुष्य की बुद्धि शुद्ध होती है, इसलिए जो उपर्युक्त साधनों से रहित है, उसकी बुद्धि अशुद्ध है, ऐसा समझना चाहिए।) होने के कारण उस विषय में यानी कर्मों के होने में केवल शुद्ध स्वरूप आत्मा को कर्ता समझता है, वह मलीन बुद्धि वाला अज्ञानी यथार्थ नहीं समझता\n  ॥16॥</string>
    <string name="sanskrit_c18s17">यस्य नाहङ्कृतो भावो बुद्धिर्यस्य न लिप्यते।\nहत्वापि स इमाँल्लोकान्न हन्ति न निबध्यते  ॥17॥\n</string>
    <string name="bhavarth_c18s17">भावार्थ  :-  जिस पुरुष के अन्तःकरण में \'मैं कर्ता हूँ\' ऐसा भाव नहीं है तथा जिसकी बुद्धि सांसारिक पदार्थों में और कर्मों में लिपायमान नहीं होती, वह पुरुष इन सब लोकों को मारकर भी वास्तव में न तो मरता है और न पाप से बँधता है। (जैसे अग्नि, वायु और जल द्वारा प्रारब्धवश किसी प्राणी की हिंसा होती देखने में आए तो भी वह वास्तव में हिंसा नहीं है, वैसे ही जिस पुरुष का देह में अभिमान नहीं है और स्वार्थरहित केवल संसार के हित के लिए ही जिसकी सम्पूर्ण क्रियाएँ होती हैं, उस पुरुष के शरीर और इन्द्रियों द्वारा यदि किसी प्राणी की हिंसा होती हुई लोकदृष्टि में देखी जाए, तो भी वह वास्तव में हिंसा नहीं है क्योंकि आसक्ति, स्वार्थ और अहंकार के न होने से किसी प्राणी की हिंसा हो ही नहीं सकती तथा बिना कर्तृत्वाभिमान के किया हुआ कर्म वास्तव में अकर्म ही है, इसलिए वह पुरुष \'पाप से नहीं बँधता\'।)\n॥17॥</string>
    <string name="sanskrit_c18s18">ज्ञानं ज्ञेयं परिज्ञाता त्रिविधा कर्मचोदना।\nकरणं कर्म कर्तेति त्रिविधः कर्मसङ्ग्रहः  ॥18॥\n</string>
    <string name="bhavarth_c18s18">भावार्थ  :-  ज्ञाता (जानने वाले का नाम \'ज्ञाता \' है।), ज्ञान (जिसके द्वारा जाना जाए, उसका नाम \'ज्ञान \' है। ) और ज्ञेय (जानने में आने वाली वस्तु का नाम \'ज्ञेय\' है।)- ये तीनों प्रकार की कर्म-प्रेरणा हैं और कर्ता (कर्म करने वाले का नाम \'कर्ता\' है।), करण (जिन साधनों से कर्म किया जाए, उनका नाम \'करण\' है।) तथा क्रिया (करने का नाम \'क्रिया\' है।)- ये तीनों प्रकार का कर्म-संग्रह है\n॥18॥</string>
    <string name="sanskrit_c18s19">(तीनों गुणों के अनुसार ज्ञान, कर्म, कर्ता, बुद्धि, धृति और सुख के पृथक-पृथक भेद)\nज्ञानं कर्म च कर्ता च त्रिधैव गुणभेदतः।\nप्रोच्यते गुणसङ्ख्याने यथावच्छ्णु तान्यपि  ॥19॥\n</string>
    <string name="bhavarth_c18s19">भावार्थ  :-  गुणों की संख्या करने वाले शास्त्र में ज्ञान और कर्म तथा कर्ता गुणों के भेद से तीन-तीन प्रकार के ही कहे गए हैं, उनको भी तु मुझसे भलीभाँति सुन\n॥19॥</string>
</resources>