<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <group
        android:checkableBehavior="none">

        <item
            android:id="@+id/dark_mode"
            android:icon="@drawable/ic_dark__mode"
            android:title="@string/dark_mode"
            app:actionLayout="@layout/dark_mode_switchbtn"/>
        <item android:id="@+id/share_drawer"
            android:icon="@drawable/ic_share"
            android:title="@string/share_the_app"/>
        <item android:id="@+id/rate"
            android:icon="@drawable/ic_baseline_star_24"
            android:title="@string/rate_app"/>
        <item android:id="@+id/feedback"
            android:icon="@drawable/ic_baseline_feedback_24"
            android:title="@string/feedback"/>
        <item android:id="@+id/about"
            android:icon="@drawable/ic_baseline_info_24"
            android:title="@string/about"/>
        <item android:id="@+id/privacy_policy"
            android:icon="@drawable/ic_baseline_policy"
            android:title="@string/privacy_policy"/>






    </group>

</menu>